# linpde-gp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  dev-requirements.txt  formatting-requirements.txt  linting-requirements.txt  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml  experiment-requirements.txt  release.yml
experiments/: 0000_cpu_stationary_1d.ipynb  0000_poisson_dirichlet_1d.ipynb  0000_poisson_dirichlet_1d_naive.ipynb  0000_poisson_equation_fem.ipynb  0001_cpu_stationary_2d.ipynb  0001_poisson_dirichlet_1d.ipynb  0001_poisson_dirichlet_2d.ipynb  0001_poisson_equation_fourier.ipynb  0002_heat_1d.ipynb  0002_poisson_dirichlet_fem.ipynb  0002_poisson_dirichlet_gp_fem.ipynb  0002_poisson_equation_probsolve.ipynb  0003_poisson_1d_inverse_rhs.ipynb  0004_poisson_equation_conditioning.ipynb  0005_probsolve_noise.ipynb  0006_poisson_nonparametric.ipynb  0007_sysid.ipynb  0008_heat_1d.ipynb  0009_poisson_2d.ipynb  0010_poisson_1d_inverse_rhs.ipynb  1000_poisson_equation_fem.ipynb  1001_poisson_equation_fourier.ipynb  1002_poisson_equation_probsolve.ipynb  1004_poisson_equation_conditioning.ipynb  1005_probsolve_noise.ipynb  cpu.py  requirements.txt
experiments/experiment_utils/: __init__.py  _savefig.py  _setup.py  _targets.py  _tueplots_bundles.py  linpde-gp.mplstyle
notebooks/: 0000_poisson_equation_fem.ipynb  0001_poisson_equation_fourier.ipynb  0002_poisson_equation_probsolve.ipynb  0004_poisson_equation_conditioning.ipynb  0005_probsolve_noise.ipynb  0006_poisson_nonparametric.ipynb  0007_sysid.ipynb  0008_heat_1d.ipynb  0009_poisson_2d.ipynb  0010_poisson_1d_inverse_rhs.ipynb  kernel_fourier_expansion.ipynb
notebooks/notebook_utils/: __init__.py  _savefig.py  _targets.py  linpde-gp.mplstyle
results/: .gitignore
src/linpde_gp/: __init__.py  domains.py  linfuncops.py  plotting.py  randvars.py  typing.py
src/linpde_gp/bases/: __init__.py  _fem.py  _fourier.py
src/linpde_gp/domains/: __init__.py  _asdomain.py  _box.py  _cartesian_product.py  _domain.py  _interval.py  _point.py
src/linpde_gp/function/: __init__.py  _constant.py  _jax.py  _jax_arithmetic.py
src/linpde_gp/functions/: __init__.py  _affine.py  _constant.py  _fourier.py  _jax.py  _jax_arithmetic.py  _linfunctls.py  _piecewise.py  _polynomial.py  _stack.py  _truncated_gmm.py
src/linpde_gp/functions/bases/: __init__.py  _fem.py
src/linpde_gp/functions/linfuncops/: _registry.py
src/linpde_gp/galerkin/: __init__.py  _project.py  _project_operator.py  _project_rhs.py
src/linpde_gp/galerkin/bases/: __init__.py  _basis.py  _fem.py  _fourier.py
src/linpde_gp/linalg/: __init__.py  _helpers.py
src/linpde_gp/linalg/solvers/: __init__.py  _bayescg.py  _cg.py  _probabilistic_linear_solver.py  _problinsolve.py  belief_updates.py  observation_ops.py  policies.py  stopping_criteria.py
src/linpde_gp/linfuncops/: __init__.py  _arithmetic.py  _evaluate.py  _identity.py  _integrals.py  _jax.py  _linfuncop.py  _select_output.py
src/linpde_gp/linfuncops/diffops/: __init__.py  _arithmetic.py  _coefficients.py  _derivative.py  _directional_derivative.py  _functions.py  _heat.py  _laplace.py  _laplacian.py  _lindiffop.py  _partial_derivative.py
src/linpde_gp/linfunctls/: __init__.py  _arithmetic.py  _dirac.py  _evaluation.py  _flattened.py  _integrals.py  _linfunctl.py  _reshaped.py  _stacked.py
src/linpde_gp/linfunctls/projections/: __init__.py
src/linpde_gp/linfunctls/weak_forms/: __init__.py  _laplacian.py
src/linpde_gp/linops/: __init__.py  _block.py  _concatenated.py  _low_rank.py  _posdef.py
src/linpde_gp/problems/: __init__.py  _base.py  _boundary_conditions.py  _poisson.py
src/linpde_gp/problems/pde/: __init__.py  _bvp.py  _heat.py  _linear_pde.py  _poisson.py  diffops.py  domains.py
src/linpde_gp/randprocs/: __init__.py  _deterministic_process.py  _function.py  _gaussian_process.py  _jax.py  _linear_transform.py  _utils.py  kernels.py  mean_fns.py
src/linpde_gp/randprocs/_gaussian_process/: __init__.py  _conditional.py  _jax.py  _linfuncops.py  _lintransforms.py  _parametric.py  _posterior.py
src/linpde_gp/randprocs/covfuncs/: __init__.py  _expquad.py  _galerkin.py  _independent_multi_output.py  _jax.py  _jax_arithmetic.py  _linfunctls.py  _matern.py  _parametric.py  _stack.py  _tensor_product.py  _utils.py  _wendland.py  _zero.py
src/linpde_gp/randprocs/crosscov/: __init__.py  _arithmetic.py  _dirac.py  _parametric.py  _pv_crosscov.py  _reshaped.py  _stack.py  _zero.py  linfuncops.py
src/linpde_gp/randprocs/kernels/: __init__.py  _expquad.py  _galerkin.py  _independent_multi_output.py  _jax.py  _jax_arithmetic.py  _linfunctls.py  _matern.py  (+6 more)
src/linpde_gp/randvars/: __init__.py  _covariance.py  _covariance_arithmetic.py
src/linpde_gp/solvers/: __init__.py  _cholesky.py  _gp_solver.py
src/linpde_gp/utils/: __init__.py  plotting.py
src/probnum_galerkin/: __init__.py  _compute_backend.py  bases.py  diffops.py  domains.py  inference.py  linalg.py  plotting.py  randprocs.py
src/probnum_galerkin/bases/: _basis.py  _fem.py  _fourier.py
src/probnum_galerkin/linalg/: __init__.py
src/probnum_galerkin/linops/: __init__.py  _low_rank.py  _rank_1.py
src/probnum_galerkin/problems/: __init__.py  _base.py  _boundary_conditions.py  _poisson.py
src/probnum_galerkin/randprocs/: __init__.py  _linear_transform.py  kernels.py  mean_fns.py
src/probnum_galerkin/solvers/: __init__.py  _base.py  _bayescg.py  _probabilistic_linear_solver.py  _problinsolve.py  belief_updates.py  beliefs.py  observation_ops.py  policies.py  stopping_criteria.py
tests/: requirements.txt
tests/linpde_gp/linalg/: test_pivoted_cholesky.py
tests/linpde_gp/linfuncops/: test_kernels.py
tests/linpde_gp/linfunctls/: test_flattened.py  test_reshaped.py
tests/linpde_gp/linops/: test_block.py  test_low_rank.py  test_symmetric_block.py
tests/linpde_gp/problems/: test_heat.py
tests/linpde_gp/randprocs/: test_posterior_gp.py
tests/probnum_galerkin/linalg/: test_pivoted_cholesky.py
tests/probnum_galerkin/linops/: test_low_rank.py
(+104 files in other folders)
