[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
known_third_party = ["probnum"]
known_testing = ["pytest", "pytest_cases"]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "TESTING",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    # Exceptions suggested by Black:
    # https://github.com/psf/black/blob/7f75fe3669ebf0627b1b0476a6d02047e909b959/docs/compatible_configs.md#black-compatible-configurations
    "bad-continuation",
    "bad-whitespace",
    # We allow TODO comments in the following format: `# TODO (#[ISSUE NUMBER]): This needs to be done.`
    "fixme",
    # We want to use "mathematical notation" to name some of our variables, e.g. `A` for matrices
    "invalid-name",
    # Temporary ignore, see https://github.com/probabilistic-numerics/probnum/discussions/470#discussioncomment-1998097 for an explanation
    "missing-return-doc",
    "missing-yield-doc",
    # This is research code...
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
]

[tool.pytest.ini_options]
testpaths=[
    "src",
    "tests",
]
filterwarnings = [
    # "import jax" implies "import flatbuffers", which raises the following warning.
    # Ignore similar to https://github.com/google/jax/blob/main/pytest.ini
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning:flatbuffers.*"
]
