[metadata]
name = linpde-gp
version = attr: linpde_gp.__version__
author = Marvin Pförtner
author-email = marvin.pfoertner@student.uni-tuebingen.de
platforms = any

[options]
packages = find:
include_package_data = True
package_dir =
    =src
zip_safe = False
install_requires =
    numpy>=1.20
    scipy
    probnum>=0.1.12
    jax[cpu]>=0.2.18
    matplotlib>=3.4.3
    plum-dispatch>=1.5.6

[options.packages.find]
where = src
exclude =
    tests
