[metadata]
name = linpde-gp
version = attr: linpde_gp.__version__
url = https://github.com/marvinpfoertner/linpde-gp
author = Marvin Pförtner
author-email = marvin.pfoertner@uni-tuebingen.de
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
license = MIT
description = GP Inference in Mechanistic Models based on Linear PDEs
keywords =
    gaussian-processes
    partial-differential-equations
    mechanistic-models
    probabilistic-numerics
    machine-learning
    numerical-methods
platforms = any

[options]
packages = find:
include_package_data = True
package_dir =
    =src
zip_safe = False
install_requires =
    numpy>=1.20
    scipy
    probnum>=0.1.17
    jax[cpu]>=0.2.18
    matplotlib>=3.4.3
    plum-dispatch>=1.5.6

[options.packages.find]
where = src
exclude =
    tests
